--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tages for search enginers -->
-     <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-     <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
@@ -16,6 +17,14 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>Header</header>
+
+    <!-- Main content -->
+    <main>Main content</main>
+
+    <!-- Footer -->
+    <footer>Footer</footer>
 
 </body>
 
