--- a/index.html
+++ b/index.html
@@ -20,14 +20,30 @@
 
 <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Gallery</a>
+                    </li>
+                    <li>
+                        <a href="">Sign up</a>
+                    </li>
+                </ul>
+            </nav>
+        </a>
+    </header>
 
     <!-- Main content -->
     <main>Main content</main>
 
     <!-- Footer -->
     <footer>Footer</footer>
-
 </body>
 
 </html>
