--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<!-- Stylesheet -->
- <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -23,19 +23,24 @@
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="">Sign up</a>
-                    </li>
-                </ul>
-            </nav>
+        </a>
+
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="">Gallery</a>
+                </li>
+                <li>
+                    <a href="">Sign up</a>
+                </li>
+            </ul>
+        </nav>
         </a>
     </header>
 
