--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     </header>
 
     <!-- Main content -->
-    <main>Main content</main>
+    <main>
+        <section id="hero"></section>
+    </main>
+
 
     <!-- Footer -->
     <footer>
